Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/6677785/T6677785.out
T6677785.java:8:23: compiler.err.cyclic.inheritance: E
1 error
